pages/common/assets/sass/style.scss
@import "ho-frontend-toolkit";

@import "images";
@import "default";

@import "status-bar";
@import "datatable";
@import "accordion";
@import "search";
@import "icons";
@import "filters";

html {
  height: 100%;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  position: relative;
  min-height: 100%;
}

footer {
  background-color: $white;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}

.data {
  padding: $govuk-gutter;
  background: govuk-colour("blue");
  color: white;
  a {
    color: white;
    text-decoration: none;
  }
}

details {
  margin-top: 2*$govuk-gutter;
}

.code {
  background: #eee;
  border: #ccc;
  padding: 1em;
  font-family: monospace;
}

dl {
  margin-bottom: $govuk-gutter;
  dt {
    font-weight: bold;
  }
  dd {
    margin-bottom: $govuk-gutter/2;
    white-space: pre-line;
  }

  &.light {
    dt {
      font-weight: normal;
    }
  }
}

.headline {
  margin-top: 0;
}

th {
  white-space: nowrap;
}

.control-bar {
  &.block {
    > * {
      display: block;
      margin-top: $govuk-gutter-half;
    }
  }
  &:not(.block) {
    > * {
      vertical-align: middle;
      margin-right: 1em;
    }
  }
}

.hidden {
  display: none;
}

.main {
   // leave space for footer as it is outside of the flow
  padding-bottom: 100px;

  .notification-summary {
    @extend .govuk-error-summary;
    border-color: $green;

    .notification-summary-heading {
      @extend .govuk-error-summary__title;
      margin-bottom: 0;
    }
  }

  header {
    background-color: $background;

    h1, h2 {
      margin: 0;
    }

    h1 {
      margin-bottom: $govuk-gutter;
    }

    h2, h3 {
      margin-bottom: $govuk-gutter/4;
      font-weight: normal;
    }
  }

  ul.dashboard {
    list-style: none;
    padding-left: 0;

    li {
      background: $highlight-colour;
      @extend .govuk-heading-m;
      border: 1px solid govuk-colour('grey-1');
      padding: $govuk-gutter;

      a {
        &:focus {
          background-color: $highlight-colour;
          outline: none;
        }
      }

      p {
        @extend .govuk-body-s;
      }

      &:focus-within {
        outline: 3px solid $ho-focus;
      }

      .govuk-button:last-child {
        margin-bottom: 0;
      }
    }
  }

  ul.pil-sections {
    list-style: none;

    li.section {
      padding: $govuk-gutter-half 0;
      border-top: 1px solid govuk-colour('grey-1');

      &:last-child {
        border-bottom: 1px solid govuk-colour('grey-1');
      }

      h3 {
        margin: 0;
      }
    }

    ul.actions {
      width: 100%;
      text-align: right;

      li {
        display: inline;

        &:not(:first-child)::before {
          content: ' | ';
        }
      }
    }
  }

  button.link {
    display: inline;
    background: none;
    border: 0;
    margin: 0;
    padding: 0;
    cursor: pointer;
    @extend .govuk-body;

    span {
      color: $ho-link;
      text-decoration: underline;

      &:hover {
        color: $ho-link-hover;
      }

      &:active {
        color: $ho-link-active;
      }
    }
  }

  .section-data {
    border-left: 8px solid govuk-colour('grey-2');
    margin: $govuk-gutter-half 0;

    &>.govuk-grid-column-one-third {
      padding-right: 0;
    }

    dl {
      @extend .govuk-body-s;

      dt {
        display: block;
        width: 160px;
        clear: left;
        float: left;
        font-weight: normal;
      }

      dd {
        float: left;
        font-weight: bold;
        margin: 0 0 8px $govuk-gutter;

        &:last-child {
          margin-bottom: 0;
        }
      }
    }
  }

  .sidebar, .profile {
    aside {
      border-top: 3px solid $ho-brand;
      padding-top: $govuk-gutter-half;
      box-sizing: border-box;
    }
  }

  .profile {
    .profile-section {
      border-top: 1px solid govuk-colour('grey-2');
      margin-top: $govuk-gutter-half;

      h3 {
        @extend h2;
        margin-top: $govuk-gutter;
        font-weight: normal;
      }
    }

    .accordion {
      margin-top: $govuk-gutter;
    }
  }
}

dl.inline {
  @include govuk-grid-row;

  > dt {
    @include govuk-grid-column(one-third);
  }

  > dd {
    @include govuk-grid-column(two-thirds)
  }
}

.expanding-panel {
  header, .content {
    padding-left: 0;
  }
}

.link-filter {
  margin-bottom: 20px;

  ul {
    display: inline-block;
  }
  li {
    display: inline-block;
    margin: 0 0.5em;
  }
}

.highlight {
  border-bottom: 3px solid #ffbf47;
  margin-right: 1px;
  background-color: #fff2d3;
  padding: 2px 0px 0px;
}

.status-label {
  display: inline-block;
  float: right;
  padding: 0 6px;
  text-transform: uppercase;
  font-weight: bold;

  &.completed {
    background-color: $blue;
    color: $white;
  }
}

